row alignment fix

--- a/css/custom.css
+++ b/css/custom.css
@@ -204,7 +204,7 @@ p.question {
   background-color:transparent;
 }
 
-.row .nav-tabs {
+.wallet-filter .nav-tabs {
   margin-bottom:2em;
 }
 
